--- a/index.html
+++ b/index.html
@@ -206,7 +206,12 @@
                             <div class="info">
                                 <div class="head">
                                     <h3 class="title">
-                                        <a href="#!">Basic web design</a>
+                                        <a
+                                            href="#!"
+                                            class="line-clamp break_all"
+                                        >
+                                            Basic web design
+                                        </a>
                                     </h3>
                                     <di class="rating">
                                         <img
@@ -217,7 +222,7 @@
                                         <span class="value">4.5</span>
                                     </di>
                                 </div>
-                                <p class="desc">
+                                <p class="desc line-clamp line-2 break_all">
                                     Get the best course, gain knowledge and
                                     shine for your future career.
                                 </p>
@@ -242,7 +247,11 @@
                             <div class="info">
                                 <div class="head">
                                     <h3 class="title">
-                                        <a href="#!">UI/UX design</a>
+                                        <a
+                                            href="#!"
+                                            class="line-clamp break_all"
+                                            >UI/UX design</a
+                                        >
                                     </h3>
                                     <di class="rating">
                                         <img
@@ -253,7 +262,7 @@
                                         <span class="value">4.5</span>
                                     </di>
                                 </div>
-                                <p class="desc">
+                                <p class="desc line-clamp line-2 break_all">
                                     Get the best course, gain knowledge and
                                     shine for your future career.
                                 </p>
@@ -277,7 +286,11 @@
                             <div class="info">
                                 <div class="head">
                                     <h3 class="title">
-                                        <a href="#!">Web App design</a>
+                                        <a
+                                            href="#!"
+                                            class="line-clamp break_all"
+                                            >Web App design</a
+                                        >
                                     </h3>
                                     <di class="rating">
                                         <img
@@ -288,7 +301,7 @@
                                         <span class="value">4.5</span>
                                     </di>
                                 </div>
-                                <p class="desc">
+                                <p class="desc line-clamp line-2 break_all">
                                     Get the best course, gain knowledge and
                                     shine for your future career.
                                 </p>
