--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <main style="height: 5000px">
+        <main>
             <!-- Header -->
             <header class="header fixed">
                 <div class="main-content">
                     <div class="body">
                         <!-- Logo -->
                         <img
-                            src="./assets/img/log.svg"
+                            src="./assets/img/logo.svg"
                             alt="Lesson."
                             class="logo"
                         />
@@ -552,9 +552,255 @@
                                 <a href="#!" class="btn">Read More</a>
                             </div>
                         </div>
+
+                        <!-- Blog item 4 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-1.jpg"
+                                    alt="How to become a pro web designer in 2022 and get remote job?"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remote job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog item 5 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-2.jpg"
+                                    alt="How to become a pro web designer in 2022 and get remote job?"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remote job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog item 6 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-3.jpg"
+                                    alt="How to become a pro web designer in 2022 and get remote job?"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remote job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog item 7 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-1.jpg"
+                                    alt="How to become a pro web designer in 2022 and get remote job?"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remote job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog item 8 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-2.jpg"
+                                    alt="How to become a pro web designer in 2022 and get remote job?"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remote job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+
+                        <!-- Blog item 9 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-3.jpg"
+                                    alt="How to become a pro web designer in 2022 and get remote job?"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remote job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dots">
+                        <span class="dot"></span>
+                        <span class="dot active"></span>
+                        <span class="dot"></span>
                     </div>
                 </div>
             </div>
+
+            <!-- Footer -->
+            <footer class="footer">
+                <div class="main-content">
+                    <div class="row">
+                        <!-- Column 1 -->
+                        <div class="column">
+                            <img
+                                src="./assets/img/logo-white.svg"
+                                alt="Lesson."
+                                class="logo"
+                            />
+                            <p class="desc">
+                                Need to help for your dream Career? trust us.
+                                With Lesson, study becomes a lot easier with us.
+                            </p>
+                            <div class="socials">
+                                <a href="#!">
+                                    <img
+                                        src="./assets/icons/twitter.svg"
+                                        alt="Twitter"
+                                        class="icon"
+                                    />
+                                </a>
+                                <a href="#!">
+                                    <img
+                                        src="./assets/icons/f.svg"
+                                        alt="Facebook"
+                                        class="icon"
+                                    />
+                                </a>
+                                <a href="#!">
+                                    <img
+                                        src="./assets/icons/linked_in.svg"
+                                        alt="Linkedin"
+                                        class="icon"
+                                    />
+                                </a>
+                                <a href="#!">
+                                    <img
+                                        src="./assets/icons/instagram.svg"
+                                        alt="Instagram"
+                                        class="icon"
+                                    />
+                                </a>
+                            </div>
+                        </div>
+
+                        <!-- Column 2 -->
+                        <div class="column">
+                            <h3 class="title">Company</h3>
+                            <ul class="list">
+                                <li>
+                                    <a href="#!">About Us</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Features</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Our Pricing</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Latest News</a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <!-- Column 3 -->
+                        <div class="column">
+                            <h3 class="title">Support</h3>
+                            <ul class="list">
+                                <li>
+                                    <a href="#!">FAQ’s</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Terms & Conditions</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Privacy Policy</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Contact Us</a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <!-- Column 4 -->
+                        <div class="column">
+                            <h3 class="title">Address</h3>
+                            <ul class="list">
+                                <li>
+                                    <a href="#!">
+                                        <strong>Location:</strong> 27 Division
+                                        St, New York, NY 10002, USA
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#!">
+                                        <strong>Email:</strong> email@gmail.com
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#!">
+                                        <strong>Phone:</strong> + 000 1234 567
+                                        890
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="copyright">
+                        <p>Copyright ©2022 webdesign.gdn All rights reserved</p>
+                    </div>
+                </div>
+            </footer>
         </main>
     </body>
 </html>
